Dropdown hover fixed and now is working when hovering over the icon without flickering and disappearing

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -33,6 +33,9 @@ body {
 		width: 6%;
 		margin-right: 0;
 		color: rgba(192,192,192,0.5);
+		padding-bottom: 20px;
+		position: relative;
+		top: 12px;
 	}
 
 	&__settings {
@@ -47,7 +50,7 @@ body {
 	}
 
 	&__settings-item {
-		color: #fff;
+		color: #f7f8f9;
 		text-decoration: none;
 		list-style: none;
 	}
@@ -55,6 +58,10 @@ body {
 	&__icon:hover + .account__settings {
 		display: block;
 
+	}
+
+	.account__settings:hover {
+		display: block;
 	}
 }
 
@@ -94,7 +101,7 @@ ul {
 }
 
 .fas {
-		margin-left: 1%;
+
 }
 
 .help {
